Fix #1 - Content area borders are not visible

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -434,3 +434,22 @@ width: 50%;
 width: 25%;
 
 }
+
+/* Voog cms style overrides */
+#wrap .edy-empty-bordered {
+  color: rgba(255,255,255,.33);
+  border-color: rgba(255,255,255,.33);
+}
+#wrap .edy-texteditor-view.placeholder {
+  color: rgba(255,255,255,.5);
+}
+#wrap .edy-content-element-hover {
+  border-color: rgba(255,255,255,.1);
+}
+#wrap .edy-texteditor-active {
+  outline-color: rgba(255,255,255,.2);
+}
+#wrap .edy-fe-field-active,
+#wrap .edy-fe-active .edy-fe-field:hover {
+  outline-color: rgba(255,255,255,.1);
+}
